Delphi/Lib/XCGUI.pas

procedure XLayout_SetHorizon (hLayout:Integer;bHorizon:LongBool);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetAlignH (hLayout:Integer;nAlign:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetAlignV (hLayout:Integer;nAlign:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetPadding (hLayout:Integer;left:Integer;top:Integer;right:Integer;bottom:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetSpace (hLayout:Integer;nSpace:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetLayoutWidth (hLayout:Integer;nType:Integer;nWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetLayoutHeight (hLayout:Integer;nType:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetLayoutWidth (hLayout:Integer;pType:Integer;pWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetLayoutHeight (hLayout:Integer;pType:Integer;pHeight:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_GetWidth (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetHeight (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetWidthIn (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetHeightIn (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_GetContentSize (hLayout:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XLayout_ShowLayout (hLayout:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
function XLayout_GetChildCount (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetChildType (hLayout:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetChild (hLayout:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_Draw (hLayout:Integer;hDraw:Integer);stdcall;far; external 'xcgui.dll';
procedure Layout_SetEle (hLayout:Integer;hParent:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_SetDrawItemBkFlags (hEle:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_SetItemData (hEle:Integer;iItem:Integer;nUserData:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetItemData (hEle:Integer;iItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_SetItemInfo (hEle:Integer;iItem:Integer;pItem:TlistBox_item_Info_i) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetItemInfo (hEle:Integer;iItem:Integer;pItem:TlistBox_item_Info_i) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XListBox_AddItemBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XListBox_AddItemBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XListBox_AddItemBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_GetItemBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_ClearItemBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_SetSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetSelectItem (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_CancelSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_CancelSelectAll (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetSelectAll (hEle:Integer;pArray:Integer;nArraySize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_GetSelectCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_GetItemMouseStay (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_SelectAll (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XListBox_SetItemHeightDefault (hEle:Integer;nHeight:Integer;nSelHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XListBox_GetItemHeightDefault (hEle:Integer;pHeight:Integer;pSelHeight:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_GetItemIndexFromHXCGUI (hEle:Integer;hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_HitTest (hEle:Integer;pPt:TPOINT) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_HitTestOffset (hEle:Integer;pPt:TPOINT) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetTemplateObject (hEle:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_EnableMultiSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XListBox_BindAdapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_GetAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_RefreshData (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_AddColumn (hEle:Integer;width:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_InsertColumn (hEle:Integer;width:Integer;iItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_EnableMultiSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_EnableDragChangeColumnWidth (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_SetDrawItemBkFlags (hEle:Integer;style:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetColumnWidth (hEle:Integer;iItem:Integer;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetColumnMinWidth (hEle:Integer;iItem:Integer;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetColumnWidthFixed (hEle:Integer;iColumn:Integer;bFixed:LongBool);stdcall;far; external 'xcgui.dll';
function XList_GetColumnWidth (hEle:Integer;iColumn:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetColumnCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_DeleteColumn (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XList_DeleteColumnAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_SetItemData (hEle:Integer;iItem:Integer;iSubItem:Integer;data:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_GetItemData (hEle:Integer;iItem:Integer;iSubItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_SetSelectItem (hEle:Integer;iItem:Integer;bSelect:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_GetSelectItem (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetSelectItemCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_SetSelectAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetSelectAll (hEle:Integer;pArray:Integer;nArraySize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_CancelSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XList_CancelSelectAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetHeaderHELE (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_BindAdapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_BindAdapterHeader (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_GetTemplateObject (hEle:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetItemIndexFromHXCGUI (hEle:Integer;hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetHeaderTemplateObject (hEle:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetHeaderItemIndexFromHXCGUI (hEle:Integer;hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_SetHeaderHeight (hEle:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetHeaderHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_AddItemBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_AddItemBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XList_AddItemBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetItemBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_ClearItemBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetItemHeightDefault (hEle:Integer;nHeight:Integer;nSelHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_GetItemHeightDefault (hEle:Integer;pHeight:Integer;pSelHeight:Integer);stdcall;far; external 'xcgui.dll';
function XList_HitTest (hEle:Integer;pPt:TPOINT;piItem:Integer;piSubItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_HitTestOffset (hEle:Integer;pPt:TPOINT;piItem:Integer;piSubItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XList_RefreshData (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XListView_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_BindAdapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XListView_GetAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_GetTemplateObject (hEle:Integer;iGroup:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_GetTemplateObjectGroup (hEle:Integer;iGroup:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_GetItemIDFromHXCGUI (hEle:Integer;hXCGUI:Integer;piGroup:Integer;piItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_HitTest (hEle:Integer;pPt:TPOINT;pOutGroup:Integer;pOutItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_HitTestOffset (hEle:Integer;pPt:TPOINT;pOutGroup:Integer;pOutItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_EnableMultiSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XListView_SetDrawItemBkFlags (hEle:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
function XListView_SetSelectItem (hEle:Integer;iGroup:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_GetSelectItem (hEle:Integer;piGroup:Integer;piItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_GetSelectItemCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
